<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:ignore="MissingPrefix,Overdraw"
    >

  <TextView
      android:id="@+id/title"
      android:layout_width="340dp"
      android:layout_height="wrap_content"
      android:text="@string/pose_a_risk"
      android:textAlignment="center"
      android:textColor="#000000"
      android:layout_gravity="center_horizontal"
      android:textSize="28sp"
      fontPath="fonts/Nunito-ExtraBold.ttf"
      />

  <RadioGroup
      android:id="@+id/radio_group"
      android:layout_marginTop="100dp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_gravity="center_horizontal"
      >
    <RadioButton
        android:id="@+id/radio_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        android:textColor="@color/green"
        android:buttonTint="@color/green"
        android:paddingLeft="10dp"
        android:textSize="22sp"
        android:checked="false"
        android:layout_marginRight="40dp"
        />
    <RadioButton
        android:id="@+id/radio_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/green"
        android:checked="false"
        android:paddingLeft="10dp"
        android:text="@string/no"
        android:textColor="@color/green"
        android:textSize="22sp"
        />
  </RadioGroup>

  <TextView
      android:id="@+id/risk_validation"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="15dp"
      android:textColor="@color/red"
      android:layout_gravity="center_horizontal"
      android:text="@string/must_choose_option"
      android:gravity="center_vertical"
      fontPath="fonts/Nunito-SemiBold.ttf"
      android:visibility="invisible"
      />

  <android.support.v7.widget.AppCompatButton
      android:id="@+id/button0"
      android:layout_width="180dp"
      android:layout_height="50dp"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="50dp"
      android:background="@drawable/green_bg_button"
      android:onClick="riskButtonListener"
      android:text="@string/continue_button"
      android:textAllCaps="false"
      android:textColor="#ffffff"
      android:textSize="24sp"
      fontPath="fonts/Nunito-Bold.ttf"
      />

</LinearLayout>