<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:ignore="MissingPrefix,Overdraw"
    android:weightSum="1"
    >

  <TextView
      android:id="@+id/title"
      android:layout_width="260dp"
      android:layout_gravity="center_horizontal"
      android:layout_height="wrap_content"
      android:text="@string/take_a_picture"
      android:textAlignment="center"
      android:textColor="#000000"
      android:textSize="28sp"
      fontPath="fonts/Nunito-ExtraBold.ttf"
      />

  <ImageView
      android:id="@+id/photo_view"
      android:layout_width="300dp"
      android:layout_height="180dp"
      android:background="#eeee"
      android:layout_marginTop="30dp"
      android:layout_gravity="center_horizontal"
      android:layout_weight="0.40"
      />

  <TextView
      android:id="@+id/photo_validation"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="15dp"
      android:textColor="@color/red"
      android:layout_gravity="center_horizontal"
      android:text="@string/must_choose_photo"
      android:gravity="center_vertical"
      fontPath="fonts/Nunito-SemiBold.ttf"
      android:visibility="invisible"
    />



  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="20dp"
      >
    <ImageButton
        android:id="@+id/camera_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/green_border_button"
        android:onClick="cameraButtonListener"
        android:src="@drawable/ic_photo_camera"
        android:foregroundGravity="center"
        android:gravity="center"
        />

    <ImageButton
        android:id="@+id/gallery_button"
        android:layout_marginLeft="40dp"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/green_border_button"
        android:onClick="galleryButtonListener"
        android:gravity="center"
        android:src="@drawable/ic_gallery"
        />
  </LinearLayout>

  <android.support.v7.widget.AppCompatButton
      android:id="@+id/button0"
      android:layout_width="180dp"
      android:layout_height="50dp"
      android:layout_gravity="center_horizontal"
      android:background="@drawable/green_bg_button"
      android:onClick="photoButtonListener"
      android:text="@string/continue_button"
      android:textAllCaps="false"
      android:textColor="#ffffff"
      android:textSize="24sp"
      fontPath="fonts/Nunito-Bold.ttf"
      />

</LinearLayout>